# Advanced-Crypto-

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  KrakenSK_Master_Operations_V1.csv  LICENSE  README.md  pair_pool_usd.txt  pyproject.toml  universe.json
apps/collector/: main.py
apps/llm_service/: main.py
apps/mcp_server/: main.py
apps/oms/: main.py
apps/operator_ui/: dashboard.html  main.py
apps/replay/: __init__.py  main.py
apps/review_scheduler/: main.py
apps/trader/: account_sync_state.py  boot.py  callback_server.py  config.py  cycle.py  features.py  logging.py  logging_sink.py  main.py  paper.py  positions.py  shadow.py  strategy.py  types.py
apps/universe_manager/: main.py
apps/visual_feed/: __init__.py  main.py
apps/visual_phi3/: __init__.py  main.py
configs/: kraken_asset_pairs.cache.json  kraken_rules.cache.json  llm.local.env.example  northstar_runtime_baseline.json  pair_age_cache.json  research_baseline.json  runtime_override_proposals.json  runtime_overrides.json
core/: symbols.py
core/config/: runtime.py
core/data/: account_sync.py  dexscreener.py  kraken_rest.py  live_buffer.py  loader.py  news_sentiment.py  rate_limiter.py  warmup.py
core/execution/: base.py  clamp.py  cpp_exec.py  kraken_live.py  kraken_rules.py  mock_exec.py  order_policy.py  risk_budget.py
core/features/: atr.py  base.py  batch.py  bollinger.py  correlation.py  cuda_atr.py  cuda_bollinger.py  cuda_correlation.py  cuda_momentum.py  cuda_northstar.py  cuda_rsi.py  divergence.py  market_trend.py  momentum.py  pattern_engine.py  pattern_log_schema.py  rsi.py  trend_state.py
core/health/: watchdog.py
core/llm/: behavior_score.py  client.py  contracts.py  micro_prompts.py  nemotron.py  nemotron_client.py  orchestrator.py  phi3_exit_posture.py  phi3_pattern_verifier.py  phi3_reflex.py  phi3_scan.py  prompts.py
cpp/: CMakeLists.txt
cpp/include/: cuda_atr.hpp  cuda_bollinger.hpp  cuda_correlation.hpp  cuda_features.hpp  cuda_northstar.hpp  cuda_rsi.hpp  execution_engine.hpp  kraken_ws.hpp
cpp/reference/: northstar_quant_kernels.cu
cpp/src/: bindings.cpp  cuda_atr.cu  cuda_atr_bindings.cpp  cuda_bollinger.cu  cuda_bollinger_bindings.cpp  cuda_correlation.cu  cuda_correlation_bindings.cpp  cuda_features.cu  cuda_features_bindings.cpp  cuda_northstar.cu  cuda_northstar_bindings.cpp  cuda_rsi.cu  cuda_rsi_bindings.cpp  execution_engine.cpp  kraken_ws.cpp
docs/: 10_10_roadmap.md  AGENT_IMPLEMENTATION_CHECKLIST.md  AGENT_TRADING_MANUAL.md  A_to_Z_Project_Review.md  DOCS_INDEX.md  KRAKENSK_OPERATING_FRAMEWORK.md  MACRO_MARKET_DYNAMICS.md  Upgrade_Implementation_Plan.md  architectural_review.md  coin_profile_design.md  deep_dive_review.md  entry_exit_research.md  exchange_fee_policy_refs.md  funding_readiness_checklist.md  llm_operating_model.md  micro_prompts_review.md  northstar_runtime_baseline.md  open_position_flow.md  project_rating.md  research_action_plan.md  research_baseline.md  round_4_review.md  runtime_cycle.md  symbol_classification.md  trading_playbook.md  tuning_audit.md  tuning_review.md
scripts/: _check_status.ps1  build_cpp.py  check_ai_backends.ps1  check_godmode_metrics.ps1  check_godmode_metrics.py  download_history.py  download_models.py  download_qwen3_4b.ps1  download_qwen3_4b.sh  phi3_server.py  reload_all.ps1  report_setup_reliability.py  restart_trader.ps1  start_all.ps1  start_mcp_tunnel.ps1  start_models.ps1  start_phi3_npu.ps1  start_vllm.ps1  stop_all.ps1  vectorbt_research.py
tests/: conftest.py  test_account_sync.py  test_account_sync_history_fallback.py  test_advanced_features.py  test_advisory_bundle.py  test_aggression_mode.py  test_aggression_recommendation.py  test_alerting.py  test_candidate_packet.py  test_coin_profile_llm.py  test_collector_seed.py  test_critical_regressions.py  test_daily_review.py  test_divergence.py  test_entry_verifier_ordering.py  test_execution_guards.py  test_execution_weight_fallback.py  test_feature_batch_isolation.py  test_features.py  test_fee_filter.py  test_final_score.py  test_high_priority_regressions.py  test_lane_identity.py  test_lane_scanners.py  test_lane_supervision_calibration.py  test_live_exit_state.py  test_llm_contracts.py  test_llm_lane_metrics.py  test_log_retention.py  test_mover_advisory.py  test_mover_gate.py  test_nemo_payload_merge.py  test_nemotron_client.py  test_nemotron_policy.py  test_nemotron_summary.py  test_open_order_reconcile.py  test_pattern_engine.py  test_phi3_pattern_verifier.py  test_phi3_scan.py  test_policy_pipeline.py  (+17 more)
(+54 files in other folders)
