[project]
name = "krakensk"
version = "0.1.0"
description = "Kraken spot trading system scaffold with LLM components"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "fastapi>=0.111.0",
  "mcp>=1.26.0",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
ml = [
  "xgboost>=2.0.0",
]
research = [
  "vectorbt>=0.28.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "apps*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
